# user_service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-test  README.md  Taskfile.dist.yml  dashboard-template.json  docker-compose.yml  main.py  migrate.py  pyproject.toml  requirements-test.txt  requirements.txt  sonar-project.properties
.ci-cd/: test.sh
app/api/: __init__.py  application.py  exceptions.py  main.py  responses.py
app/api/technical/: router.py
app/api/v1/: v1_router.py
app/common/: bone.py  events.py  models_temp.py
app/consumers/: main.py  types.py
app/consumers/assign_large_account/: __init__.py  handler.py
app/consumers/wallet_creation/: __init__.py  handler.py
app/core/: logs.py  metrics.py  settings.py
app/core/database/: __init__.py  connection.py  connection.pyi  metrics.py  metrics_collector.py  pool.py  pool.pyi
app/core/di/: providers.py  types.py
app/periodic/: cron.py
app/periodic/jaw/: __init__.py  app.py  di.py  service.py  settings.py
app/repositories/: __init__.py
app/repositories/bones/: queries.py  repository.py
app/repositories/organizations/: queries.py  repository.py
app/repositories/user/: queries.py  repository.py
app/repositories/wallet/: queries.py  repository.py
skeletor-db/: yoyo.ini
skeletor-db/migrations/: .gitkeep  20240719_01_Ek0dU-bones-table.py
tests/: conftest.py  utils.py
tests/consumers/new_bone/: test_handler.py
tests/periodic/jaw/: conftest.py  test_service.py
users-db/migrations/: 20241012_01_Ek0dU-base-tables.py  20241012_01_Ek0dU-wallet-table.py
(+27 files in other folders)
